Dividí las secciones de la biblioteca

--- a/documentales.html
+++ b/documentales.html
@@ -21,7 +21,234 @@
     <meta name="theme-color" content="#ff0000">
 </head>
 <body>
-   
+    <article>
+        <h2>Documentales</h2>
+        <section>
+            <h3>Consumo e industria</h3>
+            <div>
+                <h4>Minimalism</h4>
+                <img src="" alt="">
+                <p>¿Realmente necesitamos todo lo que tenemos alrededor? Esta y más preguntas son respondidas en este documental.</p>
+            </div>
+            <div>
+                <h4>Food INC</h4>
+                <img src="" alt="">
+                <p>Analiza lo dañinos que son ciertos productos que adquirimos a diario. Expone los procesos de fabricación de ciertos alimentos, con prácticas que muchas veces    van contra lxs agricultorxs, marcando como único objetivo la venta masiva de sus productos por encima del bienestar del consumidor o el respeto al ambiente.   Muestra la realidad de este sistema que solo busca ganancias.</p>
+            </div>
+            <div>
+                <h4>The true cost (El verdadero costo)</h4>
+                <img src="" alt="">
+                <p>Es la historia sobre la ropa que usamos. El detrás de escena. Lo que no vemos, pero tenemos que saber. Es un recorrido para entender quiénes y en qué    condiciones hacen la ropa que usamos cada día. El documental nos pregunta, ¿quién paga el verdadero costo por nuestras prendas?</p>
+            </div>
+            <div>
+                <h4>The end of the line (Salvemos el mar)</h4>
+                <img src="" alt="">
+                <p>Uno de los primeros documentales que trata sobre los devastadores efectos de la sobrepesca. Ofrece una espectacular exposición de la industria pesquera y la     dirigencia política que está fallando en proteger a las vida marina, con una evidente falta de políticas que regulen la misma.</p>
+            </div>
+        </section>
+        <section>
+            <h3>Corrupción ambiental y tráfico de especies</h3>
+            <div>
+                <h4>El Exterminio del marfil</h4>
+                <img src="" alt="">
+                <p>Muestra la red de corrupción en torno del tráfico del marfil, exponen la caza ilegal, comercialización de los elefantes africanos a punto de desaparecer. Se     evidencia el comercio del mismo y cuáles son los métodos para su venta, principalmente en Asia.</p>
+            </div>
+            <div>
+                <h4>Virunga</h4>
+                <img src="" alt="">
+                <p>Los guardaparques del Parque Nacional Virunga arriesgan sus vidas para proteger a los últimos gorilas de montaña en República Democrática del Congo en medio     del conflicto armado existente en el país hace décadas.</p>
+            </div>
+            <div>
+                <h4>Cómo cambiar el mundo</h4>
+                <img src="" alt="">
+                <p>En 1971 un grupo de activistas inició su primera misión con el objetivo de detener los ensayos de la bomba atómica de Nixon en Alaska. Así nació Greenpeace.     ¿Puede un puñado de personas cambiar el mundo "armados" únicamente con cámaras? Un ejemplo de cómo la política nunca priorizó las problemáticas socioambientales.   </p>
+            </div>
+            <div>
+                <h4>Tala de la selva</h4>
+                <img src="" alt="">
+                <p>Un documental de investigación sobre los vínculos entre el FSC, las talas ilegales y el desalojo de los habitantes de las selvas. Este documental muestra sin    rodeos el trasfondo de la industria maderera.</p>
+            </div>
+        </section>
+        <section>
+            <h3>Problemáticas sociales</h3>
+            <div>
+                <h4>La vuelta al río</h4>
+                <img src="" alt="">
+                <p>Narra la historia del Riachuelo a partir de testimonios de sus habitantes, especialistas, organizaciones sociales y funcionarixs, mostrando la vida de   quienes viven allí y qué sucedió a partir del fallo Mendoza de la Corte Suprema.</p>
+                <a href="https://www.youtube.com/watch?v=MybUS3VaMp8" target="_blank">Ver aquí</a>
+            </div>
+            <div>
+                <h4>Las comunidades kollas en Argentina</h4>
+                <img src="" alt="">
+                <p>En los Andes argentinos, las mujeres kollas luchan por preservar sus tradiciones. El pueblo kolla en la Argentina lleva una vida austera en la puna  semidesértica andina. Y sin embargo, allí se sienten en casa.</p>
+                <a href="https://www.youtube.com/watch?v=Fe6lEF9mLz0" target="_blank">Ver aquí</a>
+            </div>
+            <div>
+                <h4>Argentina: Exterminio del pueblo originario</h4>
+                <img src="" alt="">
+                <p>La próspera economía de fines del siglo XIX implicó la conquista de los territorios de la Patagonia, que estaban ocupados por poblaciones que fueron     convertidas en víctimas del proceso de modernización del país: la llamada "Conquista del desierto". A lo largo del siglo, distintas voces han aportado muy  diversas visiones sobre este acontecimiento ¿Cómo pensar hoy lo sucedido?</p>
+                <a href="https://www.youtube.com/watch?v=zVJvLVCi5gg" target="_blank">Ver aquí</a>
+            </div>
+            <div>
+                <h4>Para los pobres piedras</h4>
+                <img src="" alt="">
+                <p>La fuerza del film está en el silencio espléndido de los paisajes mapuches del sur argentino. Durante sus trashumancias, la ternura de Don Ernaldo, sus hijos    y sus hermanos, es arañada por los alambrados hostiles, tendidos con fines de economía rentable, que desprecia y asimila siempre los nativos a los pobres. Ellos   organizan su supervivencia entre modernidad y necesaria resistencia.</p>
+                <a href="https://www.youtube.com/watch?v=uXS7rzRUdiM" target="_blank">Ver aquí</a>
+            </div>
+        </section>
+        <section>
+            <h3>Alimentación</h3>
+            <div>
+                <h4>What the health</h4>
+                <img src="" alt="">
+                <p>Analiza las relaciones entre la alimentación y distintas enfermedades, y la millonaria industria de la salud formada por farmacéuticas y productoras de  alimentos.</p>
+            </div>
+            <div>
+                <h4>Cowspiracy</h4>
+                <img src="" alt="">
+                <p>Explora el impacto de la ganadería en el ambiente e investiga las políticas de diferentes organizaciones ambientalistas al respecto. Se muestran los     problemas  relacionados con el consumo de carne en Estados Unidos y los problemas que genera en otras regiones del mundo. Hay ciertos argumentos y datos que son    cuestionables, pero no deja de ser interesante de ver la perspectiva que se aborda.</p>
+            </div>
+            <div>
+                <h4>El mundo según Monsanto</h4>
+                <img src="" alt="">
+                <p>Documental que denuncia los efectos negativos que provocan los productos agroquímicos y las semillas transgénicas que comercializa la empresa más grande del     mundo del sector. Hoy Monsanto es el primer semillero de soja, maíz, algodón y productor de agroquímicos del mundo. Quien dice "semilla", dice Monsanto, pero   también dice alimentos.</p>
+                <a href="https://www.youtube.com/watch?v=PwxCEKotnbg" target="_blank">Ver aquí</a>
+            </div>
+            <div>
+                <h4>Con la comida no se juega</h4>
+                <img src="" alt="">
+                <p>En España se tiran 9 millones de toneladas de comida en perfecto estado, mientras más de 3 millones de españolxs pasan hambre. En este documental se indagan     las razones y responsables de esta contradicción.</p>
+                <a href="https://www.dailymotion.com/video/xyu7xd" target="_blank">Ver aquí</a>
+            </div>
+        </section>
+        <section>
+            <h3>Residuos</h3>
+            <div>
+                <h4>Basura</h4>
+                <img src="" alt="">
+                <p>¿Sabían que todos los días cada una de las personas que vive en Buenos Aires arroja un kilo de basura? En este corto se pone en evidencia la gran masa de    basura que genera la producción y el consumo desmedido, y nosotros ¿qué hacemos al respecto?</p>
+                <a href="https://play.cine.ar/INCAA/produccion/4874" target="_blank">Ver aquí</a>
+            </div>
+            <div>
+                <h4>A plastic ocean (Un océano plástico)</h4>
+                <img src="" alt="">
+                <p>Los efectos de la contaminación por el plástico en los océanos quedan en evidencia en este documental que muestra que seguimos destruyendo la vida marina.</p>
+            </div>
+            <div>
+                <h4>Residuos</h4>
+                <img src="" alt="">
+                <p>La basura electrónica, los residuos, la producción agrícola y otras problemáticas y actividades inciden en la vida del planeta. Desde diferentes regiones del    país, un abordaje que nos ayuda a comprender el cambio ambiental y también a involucrarnos en el esfuerzo de vivir en un mundo más respetuoso del medio    ambiente. Además, la importancia de la sustentabilidad, un concepto clave para pensar el presente con perspectiva hacia el futuro.Coproducido con la Universidad   Nacional de Tres de Febrero (UNTREF).</p>
+                <a href="https://www.youtube.com/watch?v=QgbvTXL5aAQ" target="_blank">Ver aquí</a>
+            </div>
+            <div>
+                <h4>Residuos: No hay marcha atrás</h4>
+                <img src="" alt="">
+                <p>El ser humano produce 2.000 millones de toneladas de basura al año. Año tras año. De ellas, 8 millones de toneladas van a parar a los océanos. Y de ahí, a   los cuerpos de los animales y a los nuestros en forma de micropartículas de plástico. Los enormes vertederos por todo el mundo son un aviso para los humanos:     urge encontrar formas de resolver el problema de la basura si no queremos acabar invadidos y contaminados por ella. El tiempo pasa y ya no hay marcha atrás.</p>
+                <a href="https://www.youtube.com/watch?v=BTke_WOLw9o" target="_blank">Ver aquí</a>
+            </div>
+        </section>
+        <section>
+            <h3>Economía</h3>
+            <div>
+                <h4>Diez mil millones</h4>
+                <img src="" alt="">
+                <p>Hace 10 años, el profesor Stephen Emmott formó un equipo de científicos de todo el mundo con la misión de predecir el futuro de la vida en la Tierra y   estudiar qué retos tendría que afrontar la humanidad. Sus estudios apuntan a que, a finales del siglo XXI, el planeta tendrá diez mil millones de habitantes,     una pesadilla de terror para un mundo con recursos limitados. Basado en el ensayo de Emmott sobre este tema publicado en más de veinte países, el documental    'Diez mil millones' es un manifiesto que anticipa el futuro y alerta sobre sobre los peligros de la superpoblación.</p>
+                <a href="https://www.youtube.com/watch?v=r9-E00wCRlM" target="_blank">Ver aquí</a>
+            </div>
+            <div>
+                <h4>Energías limpias, negocios sucios</h4>
+                <img src="" alt="">
+                <p>La realidad en España. Documental sobre energías renovables. Entrevistas a los personajes principales dentro del ámbito energético en la Península Ibérica.</    p>
+                <a href="https://www.youtube.com/watch?v=9nf-oer2TNw&feature=emb_title" target="_blank">Ver aquí</a>
+            </div>
+            <div>
+                <h4>Planeta en venta</h4>
+                <img src="" alt="">
+                <p>Este documental Francés, plasma la crisis que sufren las tierras fértiles a nivel mundial. La venta, compra y explotación llevada a un límite por grandes    corporaciones.</p>
+                <a href="https://ecoinventos.com/planeta-en-venta/" target="_blank">Ver aquí</a>
+            </div>
+            <div>
+                <h4>Comprar, tirar, comprar</h4>
+                <img src="" alt="">
+                <p>Se define como una planificación del tiempo de vida de un producto, actualmente mucho menor al tiempo de vida que potencialmente podría tener. Es decir, las     cosas se programar para fallar y ser reemplazadas por el mismo producto o por una versión renovada. Esto sólo beneficia a los fabricantes, ya que obliga a los  consumidores a comprar reiteradas veces el mismo producto, generando a la vez residuos de distinto tipo, los que aumentan el problema mundial de la  contaminación.</p>
+                <a href="https://www.youtube.com/watch?v=j1exHcuitOA" target="_blank">Ver aquí</a>
+            </div>
+        </section>
+        <section>
+            <h3>Cambio Climático</h3>
+            <div>
+                <h4>Antes que sea tarde (Before the flood)</h4>
+                <img src="" alt="">
+                <p>DiCaprio visita distintos lugares del mundo y entrevista a diferentes expertxs y líderes mundiales para mostrar la magnitud de las consecuencias del Cambio  Climático. También, se pregunta si aún es posible tomar medidas que reconduzcan el accionar actual para enfrentar esta crisis.</p>
+            </div>
+            <div>
+                <h4>La verdad incómoda</h4>
+                <img src="" alt="">
+                <p>El ex vicepresidente de Estados Unidos Al Gore alerta sobre los efectos y consecuencias del cambio climático.</p>
+            </div>
+            <div>
+                <h4>La verdad incómoda 2</h4>
+                <img src="" alt="">
+                <p>Diez años después de La verdad incómoda, Al Gore continúa su campaña para fomentar políticas que mitiguen los efectos del cambio climático y mostrar que aún     estamos a tiempo de revertir esta crisis.</p>
+            </div>
+            <div>
+                <h4>Ciudad 2030: Nuevas economías y cambio climático</h4>
+                <img src="" alt="">
+                <p>Este documental se pregunta cómo serán las Ciudades en el año 2030 y cómo deberá modificarse el modelo económico para que resulte acorde a la adaptación y   mitigación del Cambio Climático.</p>
+                <a href="https://www.youtube.com/watch?v=z4qJawymoCg" target="_blank">Ver aquí</a>
+            </div>
+        </section>
+        <section>
+            <h3>Ecosistemas</h3>
+            <div>
+                <h4>En busca del coral</h4>
+                <img src="" alt="">
+                <p>Buceadorxs, científicxs y fotógrafxs de todo el mundo emprenden una aventura subacuática épica para documentar la desaparición de los arrecifes de coral.</p>
+            </div>
+            <div>
+                <h4>La tierra de noche</h4>
+                <img src="" alt="">
+                <p>Muestra la vida de distintos animales durante la noche. A su vez, hay un detrás de escena que brinda más información sobre los ecosistemas.</p>
+            </div>
+            <div>
+                <h4>The cove (Operación Delfín</h4>
+                <img src="" alt="">
+                <p>Un equipo de activistas, cineastas y buceadorxs se embarcan en una misión secreta para exponer el secreto que esconde el pequeño pueblo de Taiji en Japón.   Utilizan técnicas innovadoras para mostrar el detrás de escena que esconde la carne de delfín y la crueldad que se maneja para capturarlos. Periodismo,   investigación e imágenes asombrosas.</p>
+            </div>
+            <div>
+                <h4>Paraíso o perdición</h4>
+                <img src="" alt="">
+                <p>Este documental realizado por el Proyecto Venus detalla las causas de fondo del desorden sistemático de valores y de los síntomas perjudiciales ocasionados  por el sistema actual establecido. Expone un plan de acción factible para el cambio social; un plan que trabaje para conseguir una civilización global pacífica  y sostenible. Perfila una alternativa hacia la cual aspirar, en la cual los derechos humanos no son sólo proclamaciones en papel sino también una forma de vida. </p>
+                <a href="https://www.youtube.com/watch?v=LoMYDivCDN8" target="_blank">Ver aquí</a>
+            </div>
+        </section>
+        <section>
+            <h3>Extractivismo</h3>
+            <div>
+                <h4>Gasland</h4>
+                <img src="" alt="">
+                <p>Cuenta como comunidades de Estados Unidos se vieron afectadas por la explotación mediante el fracking. Un notable trabajo de investigación muestra las   consecuencias de la extracción de gas mediante esta técnica a lo largo de distintos estados de dicho país.</p>
+            </div>
+            <div>
+                <h4>Agua de río</h4>
+                <img src="" alt="">
+                <p>Al sur de la Argentina, uno de los ríos más preciados se viene contaminando año a año debido al fracking que contamina el agua. El pueblo y su gente buscará     detener la pérdida del río.</p>
+                <a href="https://play.cine.ar/INCAA/produccion/5907" target="_blank">Ver aquí</a>
+            </div>
+            <div>
+                <h4>Un crudo despertar: El crack del petróleo</h4>
+                <img src="" alt="">
+                <p>Cuenta la historia de cómo la adicción de nuestra civilización al petróleo está en camino de colisionar con la realidad que impone la propia geología. Un    producto formado a lo largo de millones de años, en poco tiempo va a desaparecer sin una alternativa rápida a su reinado hegemónico.</p>
+                <a href="https://www.youtube.com/watch?v=plXR118xjas" target="_blank">Ver aquí</a>
+            </div>
+            <div>
+                <h4>Minería y corrupción: San Rafael de las flores</h4>
+                <img src="" alt="">
+                <p>Video realizado por el Colectivo Ecologista MadreSelva en el mes de septiembre de 2016, como un aporte a las comunidades que se ven amenazadas por las   industrias extractivas, especialmente por la minería. Presenta los impactos más significativos en el contexto social y ambiental ocasionado por el proyecto   minero el Escobal, ubicado en el municipio de San Rafael Las Flores, departamento de Santa Rosa. Sirva el presente material audiovisual como ejemplo de las   dignas luchas de resistencia "no violenta" ante la imposición del modelo extractivista en Guatemala.</p>
+                <a href="https://youtu.be/9dmp8Ddg2eI" target="_blank">Ver aquí</a>
+            </div>
+        </section>
+    </article>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"  crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"     crossorigin="anonymous"></script>
