--- a/proyectos.html
+++ b/proyectos.html
@@ -33,8 +33,8 @@
             </div>
         </div>
     </main> 
-    <div class="container">
-        <article>
+    <article>
+        <div class="container">
             <div class="img"><img class="proyectos" src="https://via.placeholder.com/1000x425" alt="Manifestación"></div>
             <h3>Etiquetado:</h3>
             <p>Utilizamos diversas estrategias para que el proyecto de Promoción de la Alimentación Saludable sea ley:</p>
@@ -48,8 +48,10 @@
                 <li>Participamos de la tercera reunión informativa de la Cámara de Diputados del día 23 de febrero de 2021 en la que expusimos acerca de la importancia de que la   ley de dictamine sin modificaciones.</li>
                 <li>Hablamos con diputados y diputadas de los distintos bloques de la importancia de que salga esta ley y sin modificaciones, y les pedimos que se comprometan a que    así sea.</li>
             </ol>
-        </article>
-        <article>
+        </div>    
+    </article>
+    <article class="gestion-menstrual">
+        <div class="container">
             <div class="img"><img class="proyectos" src="img/7.jpg" alt="Copita"></div>
             <h3>Gestión menstrual:</h3>
             <ol>
@@ -57,14 +59,15 @@
                 <li>Armamos una red con diferentes organizaciones de la salud, generó, feministas y sociales.</li>
                 <li>Investigamos y analizamos los distintos proyectos presentados para hacer una comparativa de los mismos y determinar qué cosas negociamos y cuáles no.</li>
             </ol>
-        </article>
-        <article>
+        </div>
+    </article>
+    <article>
+        <div class="container">
             <div class="img"><img class="proyectos" src="img/8B.jpg" alt="Huerta"></div>
             <h3>Acción Barrial:</h3>
             <p>Estamos convencidxs que el trabajo territorial es fundamental para generar cambios. Es por eso que militamos la Soberanía Alimentaria en los barrios. En conjunto con lxs vecinxs de Fuerte Apache y Barrio Evita, construimos 5 huertas en distintos espacios del barrio donde antes habían canteros, basurales o tierras ociosas, para que puedan cosechar alimentos sanos y seguros, y utilizarse en los comedores para las ollas populares. Aprendemos en conjunto a plantar, cuidar y cosechar la huerta.</p>
-        </article>
-
-    </div>
+        </div>    
+    </article>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"  crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"     crossorigin="anonymous"></script>
