Agregue Navbar a index

--- a/index.html
+++ b/index.html
@@ -21,10 +21,54 @@
     <meta name="theme-color" content="#ff0000">
 </head>
 <body>
+    <header>
+        <nav class="navbar fixed-top navbar-expand-lg">
+            <div class="container">
+                <a class="navbar-brand" href="index.html"><img class="logo-navbar" src="img/logo-grande-chico.jpg" alt="Logo"></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+                    <span><svg fill="#E9725D" width="3rem" viewBox="0 0 24 24"xmlns="http://www.w3.org/2000/svg"><g><path d="m21.5 24h-19c-1.379 0-2.5-1.122-2.5-2.5v-19c0-1.378 1.121-2.5 2.5-2.5h19c1.379 0 2.5 1.122 2.5 2.5v19c0 1.378-1.121 2.5-2.5 2.5zm-19-23c-.827 0-1.5.673-1.5 1.5v19c0 .827.673 1.5 1.5 1.5h19c.827 0 1.5-.673 1.5-1.5v-19c0-.827-.673-1.5-1.5-1.5z"/></g><g><path d="m16.5 8h-9c-.276 0-.5-.224-.5-.5s.224-.5.5-.5h9c.276 0 .5.224.5.5s-.224.5-.5.5z"/></g><g><path d="m16.5 12.5h-9c-.276 0-.5-.224-.5-.5s.224-.5.5-.5h9c.276 0 .5.224.5.5s-.224.5-.5.5z"/></g><g><path d="m16.5 17h-9c-.276 0-.5-.224-.5-.5s.224-.5.5-.5h9c.276 0 .5.224.5.5s-.224.5-.5.5z"/></g></svg></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbar">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item pr-4">
+                            <a class="nav-link" href="index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item dropdown pr-4">
+                            <a class="nav-link dropdown-toggle" href="quienes-somos.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Quiénes somos</a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="quienes-somos.html">Quiénes somos</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="quienes-somos.html#diferencial">Nuestro diferencial</a>
+                                <a class="dropdown-item" href="quienes-somos.html#capacitadores">Capacitadores</a>
+                            </div>
+                        </li>
+                        <li class="nav-item pr-4">
+                            <a class="nav-link" href="proyectos.html">Proyectos</a>
+                        </li>
+                        <li class="nav-item dropdown pr-4">
+                            <a class="nav-link dropdown-toggle" href="biblioteca.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Biblioteca</a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="biblioteca.html">Biblioteca</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="documentales.html">Documentales</a>
+                                <a class="dropdown-item" href="peliculas.html">Películas y Series</a>
+                                <a class="dropdown-item" href="libros.html">Libros</a>
+                                <a class="dropdown-item" href="mas.html">Más Recursos</a>
+                            </div>
+                        </li>
+                        <li class="nav-item pr-4">
+                            <a class="nav-link" href="busquedas-laborales.html">Búsquedas Laborales</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link boton" href="involucrate.html">Involucrate</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>      
+    </header>
     <div class="container">
-        <header>
-            navbar
-        </header>
+        
         <section>
             slider
         </section>
