hover img index

--- a/index.html
+++ b/index.html
@@ -85,9 +85,21 @@
         <section>
             <h2>-Proyectos Actuales-</h2>
             <div class="proyectos">
-                <div><img class="redonda py-home" src="img/6B.jpg" alt=""></div>
-                <div><img class="redonda py-home" src="img/7B.jpg" alt=""></div>
-                <div><img class="redonda py-home" src="img/8B.jpg" alt=""></div>
+                <div class="img-index1">
+                    <div class="img-info">
+                        <a href="proyectos.html#etiquetado"><h6>Etiquetado</h6></a>
+                    </div>
+                </div>
+                <div class="img-index2">
+                    <div class="img-info">
+                        <a href="proyectos.html#gestion-menstrual"><h6>Gestión Menstrual</h6></a>
+                    </div>
+                </div>
+                <div class="img-index3">
+                    <div class="img-info">
+                        <a href="proyectos.html#accion-barrial"><h6>Acción Barrial</h6></a>
+                    </div>
+                </div>
             </div>
         </section>
     </div>
