--- a/proyectos.html
+++ b/proyectos.html
@@ -77,7 +77,7 @@
             </div>
         </div>
     </main> 
-    <article>
+    <article id="etiquetado">
         <div class="container">
             <div class="img"><img class="proyectos" src="https://via.placeholder.com/1000x425" alt="Manifestación"></div>
             <h3>Etiquetado:</h3>
@@ -94,7 +94,7 @@
             </ol>
         </div>    
     </article>
-    <article class="gestion-menstrual">
+    <article id="gestion-menstrual" class="gestion-menstrual">
         <div class="container">
             <div class="img"><img class="proyectos" src="img/7.jpg" alt="Copita"></div>
             <h3>Gestión menstrual:</h3>
@@ -105,7 +105,7 @@
             </ol>
         </div>
     </article>
-    <article>
+    <article id="accion-barrial">
         <div class="container">
             <div class="img"><img class="proyectos" src="img/8B.jpg" alt="Huerta"></div>
             <h3>Acción Barrial:</h3>
