--- a/busquedas-laborales.html
+++ b/busquedas-laborales.html
@@ -66,19 +66,19 @@
             </div>
         </nav>      
     </header>
-    <div class="container">
+    <div class="container" id="busquedas-laborales">
         <ul class="trabajo">
-            <li class="accion menu">Trabajo territorial</li>
-            <li class="accion menu">Logística y planificación territorial</li>
-            <li class="desarrollo menu">Recaudador de fondos</li>
-            <li class="comunicacion menu">Community manager</li>
-            <li class="comunicacion menu">Editorx audiovisual</li>
-            <li class="comunicacion menu">Diseñador gráfico</li>
-            <li class="comunicacion menu">Asistente de manejo de Twitter</li>
-            <li class="politica menu">Investigador/a políticx</li>
+            <li class="accion menu trabajo-territorial"><a class="busqueda" href="#trabajo-territorial">Trabajo territorial</a></li>
+            <li class="accion menu logistica"><a class="busqueda" href="#logistica">Logística y planificación territorial</a></li>
+            <li class="desarrollo menu recaudador-fondos"><a class="busqueda" href="#recaudador-fondos">Recaudador de fondos</a></li>
+            <li class="comunicacion menu community-manager"><a class="busqueda" href="#community-manager">Community manager</a></li>
+            <li class="comunicacion menu editor-audiovisual"><a class="busqueda" href="#editor-audiovisual">Editorx audiovisual</a></li>
+            <li class="comunicacion menu diseniador-grafico"><a class="busqueda" href="#diseniador-grafico">Diseñador gráfico</a></li>
+            <li class="comunicacion menu asistente-twitter"><a class="busqueda" href="#asistente-twitter">Asistente de manejo de Twitter</a></li>
+            <li class="politica menu investigador-politico"><a class="busqueda" href="#investigador-politico">Investigador/a políticx</a></li>
         </ul>
 
-        <article>
+        <article id="trabajo-territorial">
             <h3>Acción</h3>
             <h4>Trabajo territorial</h4>
             <p>Buscamos a personas comprometidas y responsables para colaborar con el trabajo territorial en el área de Acción de Consciente Colectivo.</p>
@@ -119,7 +119,7 @@
             </ul>
             <p>Cabe destacar que es una actividad voluntaria, ninguno de nuestros puestos es remunerado.</p>
         </article>
-        <article>
+        <article id="logistica">
             <h3>Acción</h3>
             <h4>Logística y planificación territorial</h4>
             <p>Buscamos a personas comprometidas y responsables para colaborar con el trabajo de logística y planificación territorial en el área de Acción de Consciente Colectivo.</p>
@@ -160,7 +160,7 @@
             </ul>
             <p>Cabe destacar que es una actividad voluntaria, ninguno de nuestros puestos es remunerado.</p>
         </article>
-        <article>
+        <article id="recaudador-fondos">
             <h3>Desarrollo Institucional</h3>
             <h4>Recaudador de fondos</h4>
             <p>Buscamos a personas comprometidas y responsables para colaborar con el trabajo de Recaudación de Fondos en el área de Desarrollo Institucional de Consciente Colectivo.</p>
@@ -199,7 +199,7 @@
             </ul>
             <p>Cabe destacar que es una actividad voluntaria, ninguno de nuestros puestos es remunerado.</p>
         </article>
-        <article>
+        <article id="community-manager">
             <h3>Comunicación</h3>
             <h4>Community Manager</h4>
             <p>Convocamos a personas con fuerte compromiso social y ambiental para colaborar como Community Manager en el área de Comunicación de Consciente Colectivo.</p>
@@ -237,7 +237,7 @@
             </ul>
             <p>Es una actividad voluntaria, ninguno de nuestros puestos es remunerado.</p>
         </article>
-        <article>
+        <article id="editor-audiovisual">
             <h3>Comunicación</h3>
             <h4>Editorx audiovisual</h4>
             <p>Convocamos a personas con fuerte compromiso social y ambiental para colaborar como Editorx audiovisual en el área de Comunicación Consciente Colectivo.</p>
@@ -273,7 +273,7 @@
             </ul>
             <p>Es una actividad voluntaria, ninguno de nuestros puestos es remunerado.</p>
         </article>
-        <article>
+        <article id="diseniador-grafico">
             <h3>Comunicación</h3>
             <h4>Diseñador Gráfico</h4>
             <p>Convocamos a personas con fuerte compromiso social y ambiental para colaborar como Diseñadorx Gráfico en el área de Comunicación Consciente Colectivo.</p>
@@ -308,7 +308,7 @@
             </ul>
             <p>Es una actividad voluntaria, ninguno de nuestros puestos es remunerado.</p>
         </article>
-        <article>
+        <article id="asistente-twitter">
             <h3>Comunicación</h3>
             <h4>Asistente de manejo de Twitter</h4>
             <p>Convocamos a personas con fuerte compromiso social y ambiental para colaborar como Asistente de manejo de Twitter en el área de Comunicación de Consciente Colectivo.</p>
@@ -348,7 +348,7 @@
             </ul>
             <p>Es una actividad voluntaria, ninguno de nuestros puestos es remunerado.</p>
         </article>
-        <article>
+        <article id="investigador-politico">
             <h3>Política</h3>
             <h4>Investigador/a políticx</h4>
             <p>Convocamos a personas con fuerte compromiso social y ambiental para colaborar como Investigador políticx de para el área de Política de Consciente Colectivo.</p>
@@ -400,5 +400,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"  crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"     crossorigin="anonymous"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
