--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -104,49 +104,49 @@
         <div class="container">
             <h2 class="wow animate__animated animate__pulse">- Nuestros Valores -</h2>
             <div class="valores">
-                <section>
+                <section class="reconocimiento">
                     <div class="img"><img src="img/valores/reconocimiento.webp" alt="Reconocimiento"></div>
                     <div>
                         <h4>Reconocimiento:</h4>
                         <p>Tener siempre en cuenta a quienes viven estas problemáticas y que sean esas personas las que den su <strong><em>testimonio</em></strong>. Buscamos reconocer     y   darles el <strong><em>espacio a quienes las padecen</em></strong>.</p>
                     </div>
                 </section>
-                <section>
+                <section class="mensaje">
                     <div class="img"><img src="img/valores/mensaje.webp" alt="Mensaje ATP"></div>
                     <div>
                         <h4>Mensaje ATP:</h4>
                         <p>Nos parece de vital importancia que entendamos y transmitamos que lo socioambiental es <strong><em>transversal a todxs</em></strong>. Por ese motivo,    apuntamos     a que <strong><em> la sociedad argentina</em></strong> se involucre y sea participe. </p>
                     </div>
                 </section>
-                <section>
+                <section class="trabajo">
                     <div class="img"><img src="img/valores/red.webp" alt="Trabajo en red"></div>
                     <div>
                         <h4>Trabajo en red:</h4>
                         <p>Somos conscientes de la cantidad de organizaciones, espacios y movimientos que existen en temas socioambientales. <strong><em>Por eso, proponemos la     colaboración    y coparticipación constante</em></strong>, reconociendo el trabajo que vienen realizando y entendiendo que tenemos <strong><em>objetivos en     común</em></strong>.</p>
                     </div>
                 </section>
-                <section>
+                <section class="capacitacion">
                     <div class="img"><img src="img/valores/capacitacion.webp" alt="Capacitación constante"></div>
                     <div>
                         <h4>Capacitación constante:</h4>
                         <p>Creemos importante ser humildes y conscientes que <strong><em>nos falta mucho por aprender y saber</em></strong>. Por eso nos parece necesario<strong><em>capacitarnos y aprender constantemente.</em></strong>.</p>
                     </div>
                 </section>
-                <section>
+                <section class="intercambio">
                     <div class="img"><img src="img/valores/intercambio.webp" alt="Intercambio constructivo"></div>
                     <div>
                         <h4>Intercambio constructivo:</h4>
                         <p>Buscamos el <strong><em>debate constructivo</em></strong> y apelamos a la formulación de <strong><em>preguntas para interpelar</em></strong> a las personas, la  dirigencia política y a los distintos actores/sectores involucrados en las problemáticas socioambientales.</p>
                     </div>
                 </section>
-                <section>
+                <section class="actualidad">
                     <div class="img"><img src="img/valores/actualidad.webp" alt="Actualidad"></div>
                     <div>
                         <h4>Actualidad:</h4>
                         <p>Es relevante que hablemos de lo que <strong><em>no se hizo ni se está haciendo</em></strong> y que tengamos presente que estas problemáticas no son de hace  unos pocos años, <strong><em>existen desde hace décadas</em></strong> y sus consecuencias las vienen padeciendo <strong><em>millones de personas</em></strong>.</p>
                     </div>
                 </section>
-                <section>
+                <section class="escucha">
                     <div class="img"><img src="img/valores/escucha.webp" alt="Escucha activa"></div>
                     <div>
                         <h4>Escucha activa:</h4>
